--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,29 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.app-container{
+ .header-container{
+  .navbar-brand{
+    z-index: 10;
+    color: red
+  }
+  .navbar-nav {
+    z-index: 10;
+    opacity: 0.9;
+    
+    .nav-link{
+      &.active{
+        color: red;
+      }
+    }
+  }
+ } 
+}
+
+
+video{
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+}
