--- a/src/Component/Admin/admin.scss
+++ b/src/Component/Admin/admin.scss
@@ -33,7 +33,8 @@
         }
 
         .admin-main-content{
-          border: 1px solid green;
+          border: 1px solid white;
+          width: 99%;
         }
     }
 }
