paginate-list-user

--- a/src/Component/Admin/Content/ModalManage.scss
+++ b/src/Component/Admin/Content/ModalManage.scss
@@ -21,6 +21,11 @@
            }
            
         }
+
+        .paginate-list-user{
+            display: flex;
+            justify-content: center;
+        }
     }
 }
 
