--- a/src/Component/Auth/register.scss
+++ b/src/Component/Auth/register.scss
@@ -4,6 +4,27 @@
         flex-direction: column;
         gap: 10px;
 
+        .header-register{
+            margin-top: 10px;
+            display: flex;
+            justify-content: flex-end;
+            // border: 1px solid;
+            height: 50px;
+            margin-right: 50px;
+            font-size: large;
+
+            .btn-back-login{
+                height: 30px;
+                margin-left: 10px;
+                border-radius: 5px;
+                border: none;
+                &:hover{
+                    color: white;
+                    background-color: black;
+                }
+            }
+        }
+
     .title-resgister{
         margin-top: 30px;
         display: flex;
@@ -23,6 +44,16 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
+
+        .pass{
+            position: relative;
+            .icon-eye{
+                position: absolute;
+                right: 10px;
+                bottom: 32px;
+                cursor: pointer;
+            }
+        }
 
         .btn-register{
             display: flex;
