--- a/src/Component/Admin/Content/Quiz/quiz.scss
+++ b/src/Component/Admin/Content/Quiz/quiz.scss
@@ -21,5 +21,42 @@
 
     .list-detail{
         margin-top: 10px;
+
+        .header-table{
+            font-size: larger;
+            font-weight: 600;
+            
+        }
+    }
+
+    .update-content{
+       
     }
 }
+
+.body-update-quiz{
+    .upload-image-label{
+        // border: 1px solid;
+        background-color: rgb(247, 240, 240);
+        border-radius: 5px;
+        width: fit-content;
+        display: flex;
+        gap: 5px;
+        align-items: center;
+        padding: 0px 8px;
+        cursor: pointer;
+    }
+    .pre-image{
+        height: 180px;
+        border: 1px dashed gainsboro;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: greenyellow;
+        font-weight: 800;
+        img{
+            height: 150px;
+        }
+    }
+}
+
