--- a/src/Component/Admin/admin.scss
+++ b/src/Component/Admin/admin.scss
@@ -25,15 +25,17 @@
     }
 
     .admin-content{
+      // overflow: scroll;
+      // height: 500px;
       width: 100%;
       position: relative;
       .back-home{
-position: absolute;
-right: 0;
-top: 5px;
-margin-right: 10px;
-font-size: large;
-cursor: pointer;
+      position: absolute;
+      right: 0;
+      top: 5px;
+      margin-right: 10px;
+      font-size: large;
+      cursor: pointer;
       }
 
         .admin-header{
@@ -44,6 +46,7 @@ cursor: pointer;
         .admin-main-content{
           border: 1px solid white;
           width: 99%;
+          height: calc(100vh - 40px);
         }
     }
 }
