--- a/src/Component/User/listquiz.scss
+++ b/src/Component/User/listquiz.scss
@@ -1,4 +1,6 @@
 .list-quiz-container{
     display: flex;
-    gap: 50px
+    gap: 50px;
+    flex-wrap: wrap;
+    // height: calc(100vh - 60px);
 }
