--- a/src/Component/Admin/admin.scss
+++ b/src/Component/Admin/admin.scss
@@ -39,8 +39,23 @@
       }
 
         .admin-header{
-          height: 40px;
-          // border: 1px solid red;
+          height: 50px;
+          border-bottom: 2px solid rgb(161, 142, 142);
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+          .leftside{
+            margin-left: 5px;
+          }
+          .rightside{
+              display: flex;
+              gap: 5px;
+              align-items: center;
+              margin-right: 15px;
+
+          }
+          
         }
 
         .admin-main-content{
