--- a/src/Component/Auth/login.scss
+++ b/src/Component/Auth/login.scss
@@ -7,8 +7,8 @@
        align-items: center;
        justify-content: flex-end;
        padding-right: 100px;
+       gap: 10px;
        .btn-signup{
-        margin-left: 8px;
         border: none;
         border-radius: 3px;
         &:hover{
