--- a/src/Component/Auth/register.scss
+++ b/src/Component/Auth/register.scss
@@ -8,14 +8,11 @@
             margin-top: 10px;
             display: flex;
             justify-content: flex-end;
-            // border: 1px solid;
             height: 50px;
-            margin-right: 50px;
-            font-size: large;
-
+            margin-right: 30px;
+            gap: 6px;
             .btn-back-login{
                 height: 30px;
-                margin-left: 10px;
                 border-radius: 5px;
                 border: none;
                 &:hover{
